--- a/IntroToElectricity/IntroToElectricity.Rmd
+++ b/IntroToElectricity/IntroToElectricity.Rmd
@@ -258,7 +258,7 @@ So, you spin a turbine
 + Does not spin a turbine.
 + PV effect generates DC electricity which is then converted to AC though an inverter
 
-## Levelized Cost of Electricity (LCOE)
+## Levelized Cost of Electricity (LCOE) and Levelized Cost of Avoided Electricity (LACE)
 
 + https://www.eia.gov/forecasts/archive/aeo15/pdf/electricity_generation_2015.pdf Table 1
     + CC is Carbon Capture.
@@ -300,6 +300,24 @@ So, you spin a turbine
 + There should be incentives to produce at lowest cost within each time period.
 + There should be incentives to reduce costs from one time period to the next, through R&D, capital investments and technology improvements.
 
+## The goals of deregulation
+
++ The goal was not to not regulate.  The goal was to only regulate what you must.
+    + Control of transmission was stifling cost reductions through competition.
++ Don't take the vertically integrated structure, which was dictated by transaction costs as a given.
+    + FERC 888/889/2000 split the generation, transmission and distribution parts.
+    + ISO/RTO, mostly non-profits set up markets and perform tasks relating to transmission.
+    + If you are not in an ISO/RTO you still have to split out generation from transmission.  State law does this.
+    
+## What does an ISO/RTO do.
+
++ Air traffic controllers for transmission.  The direct it, plan for expansion, set open prices, pay the people that own it, set prices to avoid congestion.
++ Make sure people can see the prices for transmission, OASIS
++ Organize wholesale markets.  Usually day ahead and real time, hour ahead.
++ Markets for grid stability services: Regulation up/down, spinning, non-spinning, black start
++ Meet NERC, and regional reliability requirements
++ Make sure that no one is manipulating the markets and fix the rules so they can't
+
 ## Rate of Return Regulation
 
 ROR requires normal economic profits but is often visualized in many different ways.
@@ -308,7 +326,24 @@ ROR requires normal economic profits but is often visualized in many different w
     + In a one price context this sets AR=AC and gives zero economic profit.
     + Increases output from MR=MC to AR=AC but not all the way to efficient MC=D.
 
-+ You probably want diagrams for this.
+
+## ROR Math for fixed price
+
+\begin{align}
+\max\limits_{k,l} & p f(k,l) - wl - rk \\
+& s.t. \frac{p f(k,l) - wl}{k} \leq b
+\end{align}
+
++ Variables:
+    + k and l are capital and labor
+    + f is production function
+    + p is output price
+    + w and r are wage and rental rate
+    + b is the required rate of return
+
+Sub in $p(f(k,l))$ for monopoly.
+
+You probably want diagrams for this.
 
 ## Questions for Wednesday
 
@@ -318,6 +353,9 @@ ROR requires normal economic profits but is often visualized in many different w
 
 3. Take a look at figure 1 in the original paper on the Averch - Johnson effect ( http://stats.lib.pdx.edu/proxy.php?url=https://www.jstor.org/stable/1812181?seq=1#page_scan_tab_contents).  Ignore most of the math unless you are into it.  Explain what is the A-J effect and why it happens with the simple isoquant-iso cost diagram. Explaining why ray 2 is where it is and why is the hard part.
 
+## What a Natural Monopoly Looks Like in Q-Cost Space
+
+## What Rate of Return Regulation Looks like in Q-Cost Space
 
 ## Sounds simple but
 
@@ -327,18 +365,46 @@ ROR requires normal economic profits but is often visualized in many different w
 
 ## "Revenue Requirement"
 
-$$RR  = v(q) + r RB$$
+$$RR  = v(q) + b RB$$
 
-+ The revenue requirement (RR) must be satisfied by the pricing system.      + Why the simple versions with a single price is P = AC.
++ Note variable change from above.  
++ The revenue requirement (RR) must be satisfied by the pricing system.      
+    + Why the simple versions with a single price is P = AC.
     + No guidance on what to do when there is more than one price, except find a way to allocate costs to those prices.
 
 + Most commonly the RR:
     + Passes variable costs, v(q), like fuel and wages though to be included in prices.
-    + Has a target return on capital, r, which is known to attract capital and compensate investors for risks.
+    + Has a target return on capital, b, which is known to attract capital and compensate investors for risks.
     + That rate of return is applied to the Rate Base, RB, which is analogous to capital.
 
+## "Cost" is much more complex than that
 
-## Wait but ...
++ We don't put a price on every service to the end user.
++ We often pay for one service, like transmission, by lumping it in with a different service, say energy kWh.
++ We also will use average values of cost and give one price to everyone, like residential kWh.
+    + The cost at peak is higher than middle of the night.
+    + The cost in rural areas is higher than urban
++ Other objectives that make it so cost and price don't align.
+    + Less expensive to poor
+    + Incentivize conservation
+    + Cognitive limitations
+
+## Pictures with lots of cost drivers 
+
++ One House (Certainty Costs):
+    + Connection: Just having access is a service
+    + Demand Charge kW: How much you use at most determines the fixed cost of local distribution
+    + Coincident Peak $kW_c$: How much you consume at system peak.  Your contribution to the fixed and sunk cost of transmission and generation.
+    + Energy Use kW:  Many choices here, do you average all the costs, integrate individually?
+
++ System (Randomness Costs):
+    + The random squiggles (high frequency noise): Regulation
+        + Do you charge for individual variation or based on the incremental effect
+    + Larger movements (Lower and Lower still frequency noise): Spinning and non-spinning reserve.
+    + Black Start (How to start after blackout)
+    + Maintenance and monitoring: SCADA, tree trimming, down lines, etc.
+
+## What do ROR incentives do?
 
 + If I can pass all variable costs on to the customer ...
     + Regulatory Accounting Standards just like GAAP and GASB.
@@ -359,19 +425,25 @@ Terrible cost savings incentives.
 + Add more things to the rate base.  
 + This is the A-J effect.
     + Firms prefer to deliver services by investing in capital.
-    + The rate of return, r, does not increase but if you increase RB your revenue increases and your profit, i.e., net income increases.
+    + The rate of return, b, does not increase but if you increase RB your revenue increases and your profit, i.e., net income increases.
     + Why Demand Side Management had an initial battle:
         + Rate payer advocates wanted it to pass through as expense.
         + Shareholders wanted it counted just like a power plant, in the rate base.
-+ What about r?
-    + r is actually more than one number.
-    + Bond rate necessary to attract lending.
-    + Return on common equity to attract shareholders
-    + There could be others.
+        
+## What ROR Regulation looks like in Input-Output Space.
+
+
+
+## What about b?
+
+  + b is actually more than one number.
+  + Bond rate necessary to attract lending.
+  + Return on common equity to attract shareholders
+  + There could be others.
 
 ## Yardstick Regulation
 
-Yardstick competition (Shliefer 1985).  Don't use the firm's own costs, use the costs of an identical firm elsewhere.
+Yardstick competition (Shliefer 1985) http://stats.lib.pdx.edu/proxy.php?url=http://www.jstor.org/stable/2555560.  Don't use the firm's own costs, use the costs of an identical firm elsewhere.
 
 + Creates cost competition where none previously existed.
     + If you reduce costs and your yardstick matches do not, you get higher profits.
