--- a/IntroOil/IntroOil.Rmd
+++ b/IntroOil/IntroOil.Rmd
@@ -20,12 +20,12 @@ knitr::opts_chunk$set(echo = FALSE)
 
 + It varies specific gravity
     + Lighter oils are more valuable because it is cheaper to crack into the products you want
-+ Sulfer content
-    + Low sulfer is cheaper to crack
++ Sulfur content
+    + Low sulfur is cheaper to crack
 + Location
-    + Tranportation is not cheap
-    + Piplines, train, tanker all have tradoffs with cost and safety and reliability.
-    + Sometimes law and conflict can disrupt tranportation
+    + Transportation is not cheap
+    + Pipelines, train, tanker all have trad-offs with cost and safety and reliability.
+    + Sometimes law and conflict can disrupt transportation
     
     
 ## Sulfer v Density of World Oil
@@ -37,6 +37,7 @@ knitr::opts_chunk$set(echo = FALSE)
 ## _Prices_ of oil not _Price_ of oil
 
 + Many commonly cited prices
+    + Even this list is incomplete https://en.wikipedia.org/wiki/List_of_crude_oil_products
     + Brent (North Sea) and 
     + West Texas Intermediate are common for both US and international.
 + WTI less so 
@@ -52,16 +53,17 @@ knitr::opts_chunk$set(echo = FALSE)
 ## Location
 
 + Refineries are tuned to a specific kind of oil
-    + If density or sulpher changes too much they have to remodel or variable suffer a cost hit.
+    + If density or sulfur changes too much they have to remodel or variable suffer a cost hit.
 + Oil in new areas needs transport
+
         + Truck
         + Rail
         + Pipeline
         + Boat
 + Safety
-    + Death, Property Truck>Rail>Pipeline>Boat
-    + Spilled Truck>Pipeline>Rail>Boat
-    + Environment Boat>Pipeline>Truck>Rail 
+    + (Death, Property) Truck > Rail > Pipeline > Boat
+    + (Spilled) Truck > Pipeline > Rail > Boat
+    + (Environment) Boat > Pipeline > Truck > Rail 
 
 
 ## The Markets for oil are complex and odd
@@ -83,27 +85,165 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Textbook focues on Monopoloy models and Anti-trust
   
-  + The anti-trust is great and historically relevent
+  + The anti-trust is great and historically relevant
       + Oil was one of the drivers of the anti-trust movement
-      + It is historcially relevent
-  + The monopoly style analysis is also historically relevent
+      + It is historically relevant
+  + The monopoly style analysis is also historically relevant
       + When there were a few major gasoline marketers, yes
-      + When ther were a few international cartells, yes
+      + When there were a few international cartels, yes
   + The political models of OPEC are also good for a few limited time periods
   
 ## The Paper Focuses on some inventory aguments
 
-+ Set of tools for Stock and Flow Supply and Demand Models.
++ There is a strong desire to hold inventories of oil.
++ The size of inventories depends on expectations about
+    + future prices
+    + and when price is fixed, expectations about supply availability
++ This focus on inventories and expectations
+    + Forces analysis of oil markets to use techniques from macro
+    + Some work on expectations in paper
+    + Does not do the full Dynamic Stochastic General Equilibrium approach
+
+
+## Flow and Stock Models
+
 + Marshallian Supply and Demand are flow concepts, consumption over time.
 + Not right for stock demands, which is why macro has a lot of odd models to deal with money
        + Cash in advance
        + Debt in overlapping generations
-+ This is an approximation of a way of interpreting a Hamiltonian system.
++ There is a S/D approximation of a way of interpreting a Hamiltonian system but messy.
+    + One version is in Knittel, Christopher R. and Robert S. Pindyck. 2016. "The Simple Economics of Commodity Price Speculation." American Economic Journal: Macroeconomics, 8(2): 85-110. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/mac.20140033
+    + It is messy with some hand waving but easier than learning about phase diagrams.
+    
+## Expectation Formation
+
++ Rational Expectations: Everyone in the model has a model and on average their models make correct predictions
+
++ Adaptive Expectations: Make guesses based on the past
+
++ Paper adds the idea of Who's expectations because how they form expectations is different.
+
+## VARs Vector Auto Regressions 
+
++ Adaptive, uses the past
++ Choose variables and then make sure they are of the same order of integration, e.g., levels or changes.
++ Look for a fixed linear relationship, cointegration
++ Use past and current values of all variables to explain current values of all variables.
+
+Use:
++ Plug and chug forecasts (seen in paper fig 3)
++ Impulse response.  Start with a quiet system and flick one variable at a time and see how the flick propagates.
+
+## Impulse Response Example
+
+![](https://www.federalreserve.gov/econresdata/notes/feds-notes/2014/gifjpg/laubach_fig1_20140403.jpg)
+
+
+## Financial Markets vs Policy Makers
+
++ Paper gives arguments about differences between the two
+    + Financial market have more info than can go in models
+    + Financial markets can ignore or misinterpret data.
+    
++ Futures contracts have a built in bias
+    + A risk premium.  The paper uses Hamilton-Wu estimates but there are others.
+    
+## Bubble and pari-mutal arguments
+
++ Lots of shared information including prices of futures
++ If you see prices rising you may buy based only on that
+    + Assume others know something you don't
+    + How bubbles happen amplifying a small difference
++ Grandpa Ish's Lesson on Betting Horses
+    + Don't bet on the horse you think will win
+    + Bet on the horse that pays off more than you think it should.
+    + If people do this, hard to see best guess.
+    + If they don't, bubbles.
+
+## Fun Fact
+
++ Simple prediction rules work great when more sophisticated rules cost more than the benefit they bring.
+
++ Why consumers use simple rules.  Gas prices will change by about the same amount as inflation.
 
 ## The Events
 
-## Event 1
++ The 1973/74 Oil Crisis
++ The 1979/80 Oil Crises
++ The 1980s and 1990s
++ From the Great Surge of 2003–08 to the Global Financial Crisis
 
-## Event 2
 
-## 
+## The 1973/74 Oil Crisis
++ Timing and location does not work for war driven supply shock.
++ Prices received by governments was fixed in the 1971 Tehran/Tripoli agreements
+    + Inflation hits and real prices are low
+    + Global economic boom increases commodity demand.
++ With the low fixed price all but Saudi Arabia and Kuwait had no spare capacity
++ October 10, 1973 Tehran/Tripoli dead
++ Price increases, it is negotiated, but is it nearer competitive or monopoly price?
+
+## Competitive or Monopoly?
+
++ Other commodities increased by about 75% as much as oil.
++ Only part of the big jump was a jump because of monopoly power
++ Remainder was effect of
+    + Eliminating the fixed prices
+    + Increase commodity demand
+    
++ Price controls and rationing in US did not help.
+
+
+## The 1979/80 Oil Crises
+
++ WTI from $15 to $40
++ Traditional story was Iranian revolution
+    + Timing is off. WTI hit $40 after revolution when Iran was back at full production.
++ Two shocks
+    + Commodity demand increase (2/3 increase)
+    + Expectation shock (1/3 increase)
+        + If a disruption can happen in Iran then it can happen anywhere.
+        + Explore more
+        + Increase Inventory
+
+
+## The 1980s and 1990s
+
++ Traditional argument is the Iran/Iraq war disrupted supply but there was little change in price.
+    + Even with tankers being attacked.
++ Hangover from the 70s events
+    + Lots of exploration in new areas, e.g. North Sea
+    + Lots of inventory
++ First Real OPEC effort to push towards monopoly prices
+    + Per Theory, everyone cheats.
+
+## There was a spike, a slump, a slump and a spike
+
++ Gulf 1 1990
+    + Iraq and Kuwait oil disrupted
+    + Large inventory demand anticipating Saudi Arabia attack
+
++ Asian Financial Crisis 1997
+    + Reduced commodity demand
+    
++ Venezuela 2002
+    + BTW Huge reserves of oil
+    
++ Gulf 2 2003
+    + $6 increase is hardly a shock
+
+## From the Great Surge of 2003–08 to the Global Financial Crisis
+
++ WTI from 28 to 134
++ Increased global demand for commodities including oil.
+    + Wave to China
+    + Small increase in inventory demand
+    + Little evidence of speculation
++ 2008
+    + Recession and prices go down to 100
+    + Why not further is confusing given the scale of the increase.
+    
++ 2014 The fall to $47
+    + $11 of $49 decline was commodity decline
+    + $16 because of shale boom
+    + $9 Storage (expectation) shock.
